# yul-lsp

./: .env.template  .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
examples/: erc20.yul
src/: definition_finder.rs  dune_apis.rs  identifier_finder.rs  literal_finder.rs  lsp_server.rs  main.rs
