[package]
name = "yul-lsp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
indoc = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
yultsur = { git = "https://github.com/cameel/yultsur", branch = "yul-lsp" }
env_logger = "0.9.0"
ropey = "1.3.2"
tower-lsp = { version = "0.17.0"}
dashmap = "5.1.0"
lazy_static = "1.4.0"
eyre = "0.6.8"
